# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml
calculate_diff/modules/: __init__.py  abstract_for_gendiff.py  generate_diff.py  generate_gendiff.py  parsing_data.py  plain_formatter.py  stulish_funcs.py  stylish_formatter.py
calculate_diff/scripts/: gendiff.py
gendiff/: __init__.py  abstract_for_gendiff.py  cli.py  gendiff.py  generate_diff.py  parsing_data.py  tools_for_gendiff.py
gendiff/formatters/: __init__.py  diff_dict.py  jsonify.py  plain.py  stylish.py
gendiff/modules/: jsonify_formatter.py  plain_formatter.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_for_gendiff.py
tests/fixtures/: result_for_jsonify.json
